--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 .top-panel{
     width: 100svw;
     height: 40svh;
-    background-image: url(assets/images/background-pattern-desktop.svg);
+    background-image: url('assets/images/background-pattern-desktop.svg');
 }
 .bottom-panel{
     width: 100svw;
