--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body{
     width: 100svw;
     height: 40svh;
     background-image: url('assets/images/background-pattern-desktop.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .bottom-panel{
     width: 100svw;
@@ -46,11 +48,6 @@ body{
     width: 100%;
     height: auto;
 }
-/* .faqTitle{
-    display: flex;
-    background-color: aqua;
-    align-items: center;
-} */
 .title{
     display: flex;
     align-items: center;
@@ -102,28 +99,36 @@ body{
     color: hsl(228, 45%, 44%);
  }
 
-@media (max-width: 500px){
+ /*============================MEDIA QUERY==============================*/
+
+@media (max-width: 650px) {
     .faqs{
-        width: 350px;
+        width: 500px;
+    }
+}
+
+@media (max-width: 570px){
+    .faqs{
+        width: 400px;
     }
     .title{
-        font-size: 30px;
+        font-size: 33px;
     }
     .title img{
         width: 38px;
     }
     .text{
-        font-size: 11px;
+        font-size: 14px;
     }
-    .attribution{
+    /* .attribution{
         display: flex;
         align-items: center;
         justify-content: center;
         font-size: 11px;
-    }
+    } */
  }
 
-@media (max-width: 415px){
+@media (max-width: 420px){
     .faqs{
         width: 350px;
     }
@@ -141,6 +146,9 @@ body{
         align-items: center;
         justify-content: center;
         font-size: 11px;
+    }
+    .title-point:hover{
+        background-color: var(--White);
     }
  }
 
@@ -165,3 +173,4 @@ body{
     }
    
  }
+ 
